testsuite/tests/modifiers/should_fail/ModifiersUnexpectedInQuote.stderr
ModifiersUnexpectedInQuote.hs:8:8: error: [GHC-65904]
    Modifier not (yet) handled by Template Haskell
      At most one modifier is supported
      %1 %1

